# MonteCarloAsCPP

./: CMakeLists.txt  CSVReader.cpp  CSVReader.hpp  HistoryRecord.hpp  ModernCPP.md  MonteCarloSimulator.cpp  MonteCarloSimulator.hpp  README.md  main.cpp
unit_tests/: CMakeLists.txt  CSVReaderTests.cpp  MonteCarloSimulatorTests.cpp  csv_with_whitespace.csv  data_with_empty_lines.csv  small_data.csv
